--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Anthony Hani",
   "license": "ISC",
   "dependencies": {
+    "@editorjs/editorjs": "^2.31.1",
     "@jsonjoy.com/fs-snapshot": "^4.56.2",
     "date-fns": "^4.1.0",
     "path": "^0.12.7"
