--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@editorjs/editorjs": "^2.31.1",
     "@jsonjoy.com/fs-snapshot": "^4.56.2",
     "date-fns": "^4.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pubsub-js": "^1.9.5",
+    "pubsub.js": "^1.5.2"
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
